--- a/2501928_PrabinKunwar_Regression.ipynb
+++ b/2501928_PrabinKunwar_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjgGBGmvTKnzYQYPCvDldN",
+      "authorship_tag": "ABX9TyMSv0g7hMpCr2ZEkBFtu8Aq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1491,6 +1491,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# This figure shows the distribution of the `temp_c` variable.\n",
+        "# It helps to visualize how temperature values are spread across the dataset,\n",
+        "# including the range, frequency, and overall shape of the distribution.\n"
+      ],
+      "metadata": {
+        "id": "xZ9pXQxsVFI_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plt.figure(figsize=(6,4))\n",
         "sns.scatterplot(x=\"feelslike_c\", y=\"temp_c\", data=df)\n",
         "plt.title(\"Feels Like Temperature vs Actual Temperature\")\n",
@@ -1517,6 +1530,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This figure shows the relationship between 'feelslike_c' and 'temp_c'.\n",
+        "# It helps to visualize how the \"feels like\" temperature compares to the actual temperature,\n",
+        "# highlighting patterns, trends, and any deviations between the two variables."
+      ],
+      "metadata": {
+        "id": "eUk4R6NTVXG9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1548,6 +1574,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This figure shows histograms for all numerical columns in the dataset.\n",
+        "# It helps to understand the distribution, range, and frequency of values\n",
+        "# for each numerical feature at a glance.\n"
+      ],
+      "metadata": {
+        "id": "sl1QOzU-Vew4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1593,6 +1632,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# This figure shows the correlation matrix of selected important features.\n",
+        "# The heatmap visualizes how strongly each feature is related to the others,\n",
+        "# with colors indicating the strength and direction of correlations.\n",
+        "# Annot=True displays the correlation values on the heatmap for clarity.\n"
+      ],
+      "metadata": {
+        "id": "U9YICH7DVmLe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plt.figure(figsize=(8,6))\n",
         "sns.heatmap(df.corr(), cmap=\"coolwarm\")\n",
         "plt.title(\"Correlation heatmap\")\n",
@@ -1619,6 +1672,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This figure shows the correlation heatmap of all numerical features in the dataset.\n",
+        "# It helps to understand how each feature is related to the others,\n",
+        "# with colors indicating the strength and direction of correlations.\n"
+      ],
+      "metadata": {
+        "id": "7MgOJR25VsDQ"
+      },
+      "execution_count": 82,
+      "outputs": []
     },
     {
       "cell_type": "code",
